 * Added custom 404 page for admin interface (Jack Paine)
 * Breadcrumb navigation now uses globe icon to indicate tree root, rather than home icon (Matt Westcott)
 * Updated React to 15.6.2 due to relicensing (Janneke Janssen)
 * User search in the Wagtail admin UI now works across multiple fields (Will Giddens)
 * `Page.last_published_at` is now a filterable field for search (Mikalai Radchuk)
 * Fix: "Open Link in New Tab" on a right arrow in page explorer should open page list (Emily Horsman)
 * Fix: Using `order_by_relevance=False` when searching with PostgreSQL now works (Mitchel Cabuloy)
 * Fix: Inline panel first and last sorting arrows correctly hidden in non-default tabs (Matt Westcott)
 * Fix: `WAGTAILAPI_LIMIT_MAX` now accepts None to disable limiting (jcronyn)
 * Fix: In PostgreSQL, new default ordering when ranking of objects is the same (Bertrand Bordage)
 * Fix: Fixed overlapping header elements on form submissions view on mobile (Jack Paine)
 * Fix: Fixed avatar position in footer on mobile (Jack Paine)
 * Fix: Custom document models no longer require their own post-delete signal handler (Gordon Pendleton)
 * Fix: Deletion of image / document files now only happens when database transaction has completed (Gordon Pendleton)
 * Fix: Fixed Node build scripts to work on Windows (Mikalai Radchuk)
 * Fix: Stop breadcrumb home icon from showing as ellipsis in Chrome 60 (Matt Westcott)
 * Fix: Prevent `USE_THOUSAND_SEPARATOR = True` from breaking the image focal point chooser (Sævar Öfjörð Magnússon)
 * Fix: Removed deprecated `SessionAuthenticationMiddleware` from project template (Samir Shah)
 * Fix: Custom display page titles defined with `get_admin_display_title` are now shown in search results (Ben Sturmfels, Matt Westcott)
 * Fix: Custom PageManagers now return the correct PageQuerySet subclass (Matt Westcott)


1.12.2 (18.09.2017)
~~~~~~~~~~~~~~~~~~~

 * Fix: Migration for addition of `Page.draft_title` field is now reversible (Venelin Stoykov)