@@ -24,6 +24,7 @@ Other features
  * Wagtail now uses React 15.6.2 and above, released under the MIT license (Janneke Janssen)
  * User search in the Wagtail admin UI now works across multiple fields (Will Giddens)
  * ``Page.last_published_at`` is now a filterable field for search (Mikalai Radchuk)
+ * Page search results and usage listings now include navigation links (Matt Westcott)
 
 Bug fixes
 ~~~~~~~~~
