@@ -14,6 +14,7 @@ Changelog
  * Updated React to 15.6.2 due to relicensing (Janneke Janssen)
  * User search in the Wagtail admin UI now works across multiple fields (Will Giddens)
  * `Page.last_published_at` is now a filterable field for search (Mikalai Radchuk)
+ * Page search results and usage listings now include navigation links (Matt Westcott)
  * Fix: "Open Link in New Tab" on a right arrow in page explorer should open page list (Emily Horsman)
  * Fix: Using `order_by_relevance=False` when searching with PostgreSQL now works (Mitchel Cabuloy)
  * Fix: Inline panel first and last sorting arrows correctly hidden in non-default tabs (Matt Westcott)
